# forked-daapd

./: .gitignore  404.html  Makefile.am  configure.ac  forked-daapd.conf.in  index.html  owntone.8  owntone.conf.in  sitemap.xml
.dev/devcontainer/.scripts/: install-devcontainer-tools.sh
.dev/devcontainer/data/: devcontainer-owntone.conf
.dev/devcontainer/ubuntu/: Dockerfile
.dev/vscode/: tasks.json
.github/workflows/: gh-pages.yml  macos.yml  ubuntu.yml
README_ALSA/: index.html
README_JSON_API/: index.html
README_PLAYER_WEBINTERFACE/: index.html
README_PULSE/: index.html
README_RADIO_STREAMS/: index.html
README_SMARTPL/: index.html
advanced/multiple-instances/: index.html
advanced/outputs-alsa/: index.html
advanced/outputs-pulse/: index.html
advanced/radio-streams/: index.html
advanced/remote-access/: index.html
alsa/: index.html
api/: index.html
artwork/: index.html
audio-outputs/airplay/: index.html
audio-outputs/chromecast/: index.html
audio-outputs/local-audio/: index.html
audio-outputs/mobile/: index.html
audio-outputs/roku/: index.html
audio-outputs/streaming/: index.html
audio-outputs/web/: index.html
building/: index.html
changelog/: index.html
cheat-sheet/: index.html
cli/: index.html
clients/: index.html
clients/cli/: index.html
clients/mpd/: index.html
clients/remote/: index.html
clients/supported-clients/: index.html
clients/web-interface/: index.html
configuration/: index.html
control-clients/cli-api/: index.html
control-clients/desktop/: index.html
control-clients/mobile/: index.html
control-clients/web/: index.html
development/: index.html
docker-dev/: Dockerfile  entrypoint.sh
getting-started/: index.html
getting_started/: index.html
htdocs/: index.html
htdocs/assets/: index.css  index.js  vendor.js
install/: index.html
installation/: index.html
integrations/lastfm/: index.html
integrations/spotify/: index.html
javascripts/: extra.js
json-api/: index.html
lastfm/: index.html
media-clients/: index.html
mpd/: index.html
outputs/: index.html
outputs/airplay/: index.html
outputs/chromecast/: index.html
outputs/local-audio/: index.html
outputs/streaming/: index.html
playlists/: index.html
pulse/: index.html
radio/: index.html
remote/: index.html
remote_access/: index.html
search/: search_index.json
smart-playlists/: index.html
smartpl/: index.html
spotify/: index.html
sqlext/: sqlext.c
src/: Makefile.am  artwork-refactored.c  artwork.c  artwork.h  cache.c  cache.h  cmdev_util.c  cmdev_util.h  commands.c  commands.h  conffile.c  conffile.h  db.c  db.h  db_init.c  db_upgrade.c  dmap_common.c  dmap_common.h  evthr.c  evthr.h  filescanner.c  http.c  http.h  httpd.c  httpd_artworkapi.c  httpd_daap.c  httpd_dacp.c  httpd_internal.h  httpd_jsonapi.c  httpd_libevhttp.c  httpd_oauth.c  httpd_rsp.c  httpd_streaming.c  input.c  input.h  lastfm.c  library.c  library.h  listenbrainz.c  listener.c  (+33 more)
src/evrtsp/: evrtsp.h  log.h  rtsp-internal.h  rtsp.c
src/inputs/: file.c  http.c  pipe.c  spotify.c  spotify.h  spotify_librespotc.c  timer.c
src/outputs/: airplay.c  airplay_events.c  airplay_events.h  alsa.c  cast.c  cast_channel.pb-c.c  cast_channel.pb-c.h  cast_channel.v0.pb-c.c  cast_channel.v0.pb-c.h  dummy.c  fifo.c  pulse.c  raop.c  rcp.c  rtp_common.c  rtp_common.h  streaming.c
src/pair_ap/: pair-internal.h  pair-tlv.c  pair-tlv.h  pair.c  pair.h  pair_fruit.c  pair_homekit.c
streams/: index.html
stylesheets/: extra.css
swagger/: index.html
tests/: .gitignore  Makefile.am  func_test.cpp
web-src/: MIGRATION_VUE3.md  Makefile.am  Makefile.in  index.html  npm-shrinkwrap.json  package-lock.json  package.json  vite.config.js
web-src/htdocs/player/js/: app-legacy.js  app-legacy.js.map  app.js  app.js.map  chunk-vendors.js  chunk-vendors.js.map
web-src/src/: App.vue  main.js  mystyles.scss
web-src/src/components/: CoverArtwork.vue  DropdownMenu.vue  ListAlbums.vue  ListArtists.vue  ListItemAlbum.vue  ListItemPlaylist.vue  ListItemTrack.vue  ListPlaylists.vue  ListTracks.vue  ModalDialogAlbum.vue  ModalDialogUpdate.vue  NavbarBottom.vue  NavbarItemOutput.vue  SpotifyListItemAlbum.vue
web-src/src/pages/: PageAbout.vue  PageAlbum.vue  PageAlbums.vue  PageArtist.vue  PageArtistTracks.vue  PageArtists.vue  PageAudiobooksAlbum.vue  PageAudiobooksAlbums.vue  PageAudiobooksArtist.vue  PageAudiobooksArtists.vue  PageBrowse.vue  PageBrowseRecentlyAdded.vue  PageBrowseRecentlyPlayed.vue  PageComposers.vue  PageFiles.vue  PageGenre.vue  PageGenreTracks.vue  PageGenres.vue  PageNowPlaying.vue  PagePlaylist.vue  PagePlaylists.vue  PagePodcast.vue  PagePodcasts.vue  PageQueue.vue  PageRadioStreams.vue  PageSearch.vue  SettingsPageArtwork.vue  SettingsPageOnlineServices.vue  SettingsPageRemotesOutputs.vue  SettingsPageWebinterface.vue  SpotifyPageAlbum.vue  SpotifyPageArtist.vue  SpotifyPageBrowse.vue  SpotifyPageBrowseFeaturedPlaylists.vue  SpotifyPageBrowseNewReleases.vue  SpotifyPagePlaylist.vue  SpotifyPageSearch.vue
web-src/src/router/: index.js
web-src/src/templates/: ContentWithHeading.vue
webinterface/: index.html
